# template_python_package

./: CHANGELOG.md  README.md  setup.cfg
.github/workflows/: python-publish.yml
tests/: test_example.py
