[metadata]
name = package_name
version = attr: package_name.__version__
author = Legopitstop
author_email=contact@lpsmods.dev
description=Template python package.
keywords=
url=https://github.com/legopitstop/package_name/
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12
    
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    required

